NOW-33 Added support for using NODE_ENV env var to set config for app

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -11,7 +11,8 @@
   <body id="li-body">
     <div class="li-content" ng-view></div>
     <script type="text/ng-template" id="main.html">
-      RnR App ; HELLO WORLD!
+      <h1>Lithium RnR App!</h1>
+      <div>Mode: <%= app.mode %></div>
     </script>
     <script src="app.js"></script>
   </body>
