NOW-33 Added spec test for reviews component

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -13,6 +13,7 @@
     <script type="text/ng-template" id="main.html">
       <h1>Lithium RnR App!</h1>
       <div>Mode: <%= app.mode %></div>
+      <li-rnr-reviews></li-rnr-reviews>
     </script>
     <script src="app.js"></script>
   </body>
