NOW-33 Added support for styles

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Ratings and Reviews">
     <meta name="apple-mobile-web-app-title" content="Ratings and Reviews">
     <meta name="viewport" content="width=device-width">
+    <link href="module.css" rel="stylesheet">
   </head>
   <body id="li-body">
     <div class="li-content" ng-view></div>
