NOW-33 Updated build process to make external libs their own browserify bundle to improve build times for the rnr scripts, especially when using gulp watch for livereload.

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -16,6 +16,7 @@
       <div>Mode: <%= app.mode %></div>
       <li-rnr-reviews></li-rnr-reviews>
     </script>
+    <script src="libs.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
